chapter05/apace-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-apache
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: apache
