chapter05/external-endpoints-alias.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  type: ExternalName
  externalName: zabbix.xiodi.cn
  ports:
  - port: 80
