chapter05/external-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service
subsets:
  - addresses:
    - ip: 192.168.20.101
    ports:
    - port: 80
