chapter05/metallb-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: metallb-test
spec:
  selector:
    app: hello
    tier: frontend
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  type: LoadBalancer
