chapter05/my-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-2
spec:
  selector:
    app: nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  externalIPs:
    - 192.168.20.91
